--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -15,6 +15,10 @@
     cursor: pointer;
     @include Utils.center-align();
 
+    &:disabled {
+        opacity: .7;
+    }
+
     svg {
         max-height: 20px;
         max-width: 20px;
