--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -14,6 +14,7 @@
     outline: 0;
     cursor: pointer;
     @include Utils.center-align();
+    position: relative;
 
     &:disabled {
         opacity: .7;
@@ -27,5 +28,19 @@
     &:hover, &:active {
         border: 0;
         outline: 0;
+    }
+
+    .button-badge-container {
+        position: absolute;
+        min-width: 17px;
+        height: 17px;
+        @include Fonts.font-semi-bold-tiny();
+        display: inline-block;
+        border-radius: 50%;
+        top: -5px;
+        @include Utils.center-align();
+        @include Utils.make-dir-style-attribute(right, left, -8px);
+        background: Colors.$red;
+        color: Colors.$white;
     }
 }
